--- a/AoC2023.cabal
+++ b/AoC2023.cabal
@@ -27,7 +27,7 @@ executable AoC2023
     ghc-options: -optc-O3
 
     -- Modules included in this executable, other than Main.
-    other-modules: Utilities, Day1
+    other-modules: Utilities, Day1, Day2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
