--- a/AoC2023.cabal
+++ b/AoC2023.cabal
@@ -31,6 +31,6 @@ executable AoC2023
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0, text ^>=1.2.5.0, array, regex-pcre-builtin, regex-base, containers, criterion, split, mod, ghc, PSQueue, multiset, IntervalMap, Unique, hmatrix, memoize
+    build-depends:    base, text, array, regex-pcre-builtin, regex-base, containers, criterion, split, mod, ghc, PSQueue, multiset, IntervalMap, Unique, hmatrix, memoize
     hs-source-dirs:   src
     default-language: Haskell2010
