--- a/AoC2023.cabal
+++ b/AoC2023.cabal
@@ -32,6 +32,6 @@ executable AoC2023
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, text, array, regex-pcre-builtin, regex-base, containers, criterion, split, mod, ghc, PSQueue, multiset, IntervalMap, Unique, hmatrix, memoize, range
+    build-depends:    base, text, array, regex-pcre-builtin, regex-base, containers, criterion, split, mod, ghc, PSQueue, multiset, IntervalMap, Unique, hmatrix, memoize, range, uri-encode
     hs-source-dirs:   src
     default-language: Haskell2010
